css/style.css
* {
  padding: 0;
  margin: 0;
}

:root {
  --color-primarty: #074b47;
}
html {
  font-size: 62.5%;
}
body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.Profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--color-primarty);
  padding: 3rem 0;
}
.Profile__header {
  width: 130px;
  height: 130px;
  background-color: #ffcc00;
  border-radius: 50%;
  position: relative;
  overflow: hidden;
}
.profile__img img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  object-fit: cover;
  object-position: 0 5%;
}
.profile__body {
  margin-top: 1.2rem;
  text-align: center;
}
.heading {
  font-size: 3rem;
  font-weight: 600;
  text-transform: capitalize;
  color: white;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}
.profession {
  font-size: 1.8rem;
  text-transform: uppercase;
  font-weight: 500;
  color: white;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
.profile__input {
  width: 90px;
}
.profile__upload {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.425);
  opacity: 0;
}
.profile__upload:hover {
  transition: opacity 0.3s;
  cursor: pointer;
  opacity: 1;
}
@media screen and (min-width: 768px) {
  .Profile__header {
    width: 150px;
    height: 150px;
  }
}
.navbar-container {
  background: var(--color-primarty);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  cursor: pointer;
  border: 1px solid #dfd7d71f;
}

.toggler-menu {
  width: 30px;
  height: 30px;
  transform: rotate(180deg);
  transition: transform 0.5s;
}

.navbar-container .list {
  display: flex;
  flex-direction: column;
  list-style: none;
  width: 100%;
}
.list__item {
  padding: 1.2rem 0;
  border-bottom: 1px solid #dfd7d71f;
}
.list__item a,
.list__item {
  font-size: 1.5rem;
  font-weight: 500;
  text-decoration: none;
  color: rgba(255, 255, 255, 0.753);
  transition: color 0.2s;
}
.list__item:last-child {
  font-size: 1.7rem;
  margin-left: 0;
}
.list__item a:hover,
.list__item a:focus {
  color: var(--color-primarty);
}
.list-mb {
  /* position: fixed; */
  top: 42px;
  left: 0;
  height: 100vh;
  text-align: center;
  z-index: 99;
  color: #074b47;
}
@media screen and (min-width: 768px) {
  .navbar-container {
    flex-wrap: nowrap;
  }
  .list-mb {
    position: static;
    height: auto;
  }
  .navbar-container .list__item {
    padding: 0;
    border-bottom: 0;
  }
  .navbar-container .list {
    flex-direction: row;
    align-items: center;
    gap: 3rem;
    width: auto;
  }
  .toggler-menu {
    display: none;
  }
  .list__item:last-child {
    margin-left: 2rem;
  }
}
@media screen and (max-width: 768px) {
  .activated {
    display: none !important;
  }
}
.login-form {
  width: 100%;
  height: 100vh;
  margin: 0 auto;
  padding: 5rem 0;
  margin-top: 5rem;
  position: absolute;
  top: -50px;
  z-index: 9999;
  display: none;
  background: var(--color-primarty);
}
.form-container {
  background: white;
  display: flex;
  flex-direction: column;
  gap: 0.7rem;
  position: relative;
  padding: 8rem;
  padding-top: 3rem;
  border-radius: 25px;
  width: 35%;
  margin: 0 auto;
}
.form__heading {
  font-size: 3.5rem;
  width: 100%;
  text-align: center;
  font-weight: 600;
  margin-bottom: 4rem;
}
.input-container {
  margin-bottom: 1.8rem;
}
.form__input {
  width: 90%;
  padding: 1.3rem 1.8rem;
  border: 1px solid rgba(211, 211, 211, 0.445);
  outline: 0;
  margin-bottom: 0.3rem;
  border-radius: 5px;
  font-size: 1.6rem;
  font-weight: 500;
}
.form__input:focus {
  outline: 1px solid lightskyblue;
  box-shadow: 0 0 1px 1px lightblue;
}
::placeholder {
  font-size: 1.5rem;
  color: lightgray;
}
.input-error {
  font-size: 1.2rem;
  color: red;
}
.btn-container {
  align-self: self-start;
  padding: 0 -6rem;
}
.btn {
  margin-right: 1rem;
  padding: 1.2rem 2.5rem;
  border: 0;
  border-radius: 25px;
  font-weight: 500;
  font-size: 1.3rem;
  letter-spacing: 0.5px;
}
.btn-primary {
  background-image: radial-gradient(
    circle 817.6px at 10% 20%,
    rgba(178, 34, 34, 1) 0%,
    rgba(255, 87, 51, 1) 41.9%,
    rgba(255, 165, 0, 1) 100.2%
  );
  color: #fff;
}

.btn-secondary {
  background-color: gray;
  color: #fff;
}
#cross {
  font-size: 3rem;
  font-weight: bold;
  position: absolute;
  top: 2px;
  right: 10px;
  cursor: pointer;
}
@media screen and (max-width:768px) {
  .form__heading{
    font-size: 3rem;
  }
  .form-container{
    padding: 8rem 5rem;
    width:calc(50% - 30px);
  }
}
@media screen and (max-width:500px) {
  .form__heading{
    font-size: 2.5rem;
  }
  .form-container{
    padding: 8rem 3rem;
    width:calc(80% - 30px);
  }
}

